{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "30f5ead3-d948-4c6d-a7d5-67b9001585ec",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "e8fd8ff2-65d7-44d1-8dae-01ddf3c23cc4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "afc3e2e1-9edb-4d43-b592-c13e64b52a07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "13228eee-aea2-4664-8fbf-d24f1f07c0c0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TakeItem",
                    "type": "Button",
                    "id": "fc9000cd-ddca-42b9-84d0-31df0c7d8b77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestMakeItem",
                    "type": "Button",
                    "id": "76518a53-7e29-4ad4-b675-a9a25734c8e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4781acbb-145a-4f01-aa7c-2903d649b8d1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "b8155a9e-bfa7-43e4-b4c8-12b768e85415",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "e8935b68-feec-46fe-a9ef-e90d81559a9c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "cddbdc85-fe0a-444c-95c2-6e8c7f85d65c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "723723cf-4598-4134-9f26-6661d856bcd6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8a847583-bf92-4a71-84fb-4206519513da",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5a9feb9-b280-41d5-b699-fddc6762a19a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dda013b-bc44-4459-b3d9-70eef89b8e3e",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae2f8c73-ea97-4947-81cc-5c3c090d5440",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestMakeItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InventoryUI",
            "id": "c6136a03-b10e-4638-8431-feefc00506e7",
            "actions": [
                {
                    "name": "InventoryOnOff",
                    "type": "Button",
                    "id": "1025edbf-0a0a-4aea-b6ee-e78012e6359d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryItemUse",
                    "type": "Button",
                    "id": "bb1cb9c1-712e-42b3-be28-f9c537c3dfbb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8287b1d8-19c6-45d2-aad6-efe8642a520c",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db3e1b6a-d0e6-461f-8b5e-ff8b1b83d184",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryItemUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StoreUI_Dialog",
            "id": "92bd2df5-bd75-4932-91e0-c5007a57a749",
            "actions": [
                {
                    "name": "StoreUI_Dialog_OnOff",
                    "type": "Button",
                    "id": "7a3a8894-95a6-4758-b9b3-6901ea593871",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a409d15d-5f93-4633-94bb-c905b8d57ec3",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StoreUI_Dialog_OnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EquipmentUI",
            "id": "8f3042f4-179a-485c-ab60-517739098c4f",
            "actions": [
                {
                    "name": "EquipmentOnOff",
                    "type": "Button",
                    "id": "90c77fbd-3e62-4037-bb61-6aae4efb806f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipmentItemUse",
                    "type": "Button",
                    "id": "a6c252da-fad2-4e39-837d-6472b52dafeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b5495a3-07cb-4a85-88d1-fd25a38b3ceb",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipmentOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c910ba6a-7769-45c7-bbe0-8f1bb097094a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipmentItemUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SkillUI",
            "id": "460549ee-e10f-4b0b-9a55-f5ac34724e92",
            "actions": [
                {
                    "name": "SkillWindowOnOff",
                    "type": "Button",
                    "id": "c6b9f93c-d559-4988-a57a-913cb3f4ef73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97428b72-9de3-4903-a221-c348819d8595",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillWindowOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "QuickSlotUI",
            "id": "f6220187-1fcb-4bb7-b43a-e7dff5ce13d3",
            "actions": [
                {
                    "name": "QuickSlot1",
                    "type": "Button",
                    "id": "1d55a9eb-d6cd-49f7-a94b-07e2c60c477a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot2",
                    "type": "Button",
                    "id": "272ca279-bdf9-4017-bbd8-a1a68aa5be54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot3",
                    "type": "Button",
                    "id": "473590b7-c3c1-4c27-8b03-bd128d834821",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot4",
                    "type": "Button",
                    "id": "469a99ed-cff4-4ce4-b796-12ffe19ee014",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot5",
                    "type": "Button",
                    "id": "bfa78ab4-3b7e-4fbc-b3aa-e89230b1ad19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot6",
                    "type": "Button",
                    "id": "f3c09683-931c-475c-9cac-d80b2ee96ff1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7edaffad-722a-4d7d-9d94-5634c4a2b13e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07df50b0-65d4-46b3-a6af-936bb42ccaa0",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f057ac4d-547f-445f-99a0-55c41f59419f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51be3d02-b709-4a7e-9564-4a4313b54c27",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1e4c469-7c17-4541-8b37-48cd4ac7aeda",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5407554b-63b3-4a82-877c-ec03292094a3",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenuUI",
            "id": "40214cc4-be9c-40eb-a560-22336753277d",
            "actions": [
                {
                    "name": "StartMainMenu",
                    "type": "Button",
                    "id": "9e79fb37-3dd8-4144-855f-72d09af10623",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "85f831a9-f3cc-4409-891b-8fce083981de",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Skill_Implement",
            "id": "407eb8de-d385-4065-84e9-9d45502adfaf",
            "actions": [
                {
                    "name": "FindingTarget",
                    "type": "PassThrough",
                    "id": "d2ae6756-01c2-4923-a06c-d0b5ec85a6fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickTarget",
                    "type": "PassThrough",
                    "id": "acb2f213-0fcb-4a52-8403-39a8eb0fa759",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54c3593b-a08b-4e81-8ce7-7e2ba57d1872",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FindingTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "161e0e57-1198-4129-a26d-94de4b3e2f19",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LoadingUI",
            "id": "e0cff282-5258-4d1a-bbc4-34b4d7e9ca81",
            "actions": [
                {
                    "name": "GoToNextScene",
                    "type": "Button",
                    "id": "ff951f02-f7c3-4dc3-b7d9-3552cee1b795",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9419bc7e-1244-42f8-8b1c-c57af5aa9b42",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToNextScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "QuestUI",
            "id": "84e3774d-16a0-4a45-a908-38f36497a922",
            "actions": [
                {
                    "name": "QuestUI_OnOff",
                    "type": "Button",
                    "id": "dff5f49d-29b5-41bd-97bf-65781b1d1a0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3e939c8b-9222-49e6-aa65-39aee78b7c5d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuestUI_OnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}